# langchain-ocr

./: .env.template  .gitignore  .openapi-generator-ignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.debug.yaml  docker-compose.yaml  open-api-generator.sh  openapi-spec.yaml  openapi.yaml  pyproject.toml  setup.cfg
.openapi-generator/: FILES
api/: .openapi-generator-ignore  Dockerfile  README.md  pyproject.toml
api/src/langchain_ocr/: di_config.py  main.py
api/src/langchain_ocr/api_endpoints/: convert_base.py
api/src/langchain_ocr/apis/: ocr_api.py  ocr_api_base.py
api/src/langchain_ocr/impl/: ocr_api.py
api/src/langchain_ocr/impl/api_endpoints/: convert_image_endpoint.py  convert_pdf_endpoint.py
api/src/langchain_ocr/models/: convert_image_post400_response.py  convert_pdf_post400_response.py
api/tests/: ocr_api_test.py
gradio_ui/: pyproject.toml
gradio_ui/src/gradio_ui/: app.py  converter.py
langchain_ocr_lib/: Dockerfile  README.md  pyproject.toml
langchain_ocr_lib/src/langchain_ocr_lib/: di_config.py  main.py
langchain_ocr_lib/src/langchain_ocr_lib/chains/: chain.py
langchain_ocr_lib/src/langchain_ocr_lib/converter/: converter.py
langchain_ocr_lib/src/langchain_ocr_lib/di_binding_keys/: binding_keys.py
langchain_ocr_lib/src/langchain_ocr_lib/impl/chains/: ocr_chain.py
langchain_ocr_lib/src/langchain_ocr_lib/impl/converter/: image_converter.py  pdf_converter.py
langchain_ocr_lib/src/langchain_ocr_lib/impl/langfuse_manager/: langfuse_manager.py
langchain_ocr_lib/src/langchain_ocr_lib/impl/llms/: llm_type.py
langchain_ocr_lib/src/langchain_ocr_lib/impl/settings/: language_settings.py  llm_class_type_settings.py  ollama_chat_settings.py  openai_chat_settings.py  together_ai_chat_settings.py  vllm_chat_settings.py
langchain_ocr_lib/src/langchain_ocr_lib/impl/tracers/: langfuse_traced_chain.py
langchain_ocr_lib/src/langchain_ocr_lib/language_mapping/: language_mapping.py
langchain_ocr_lib/src/langchain_ocr_lib/prompt_templates/: ocr_prompt.py
langchain_ocr_lib/src/langchain_ocr_lib/tracers/: traced_chain.py
langchain_ocr_lib/tests/: test_image_converter.py  test_pdf_converter.py
notebook/: overwrite_dependecies.ipynb
src/langchain_ocr/: dependency_container.py  main.py  security_api.py
src/langchain_ocr/api_endpoints/: convert_base.py
src/langchain_ocr/apis/: default_api.py  default_api_base.py  ocr_api.py  ocr_api_base.py
src/langchain_ocr/impl/: ocr_api.py
src/langchain_ocr/impl/api_endpoints/: convert_docx_endpoint.py  convert_html_endpoint.py  convert_image_endpoint.py  convert_pdf_endpoint.py  convert_pptx_endpoint.py
src/langchain_ocr/impl/chains/: ocr_chain.py
src/langchain_ocr/impl/langfuse_manager/: langfuse_manager.py
src/langchain_ocr/impl/settings/: llm_class_type_settings.py  ollama_chat_settings.py  ollama_llm_settings.py  openai_chat_settings.py  openai_llm_settings.py  vllm_llm_settings.py
src/langchain_ocr/impl/tracers/: langfuse_traced_chain.py
src/langchain_ocr/language_mapping/: language_mapping.py
src/langchain_ocr/models/: convert_pdf_post400_response.py
src/langchain_ocr/prompt_templates/: ocr_prompt.py
src/langchain_ocr/tracers/: traced_chain.py
src/langchain_ocr_lib/: pyproject.toml
tests/: conftest.py  test_default_api.py
