[project]
name = "gradio-ui"
version = "0.1.0"
description = ""
authors = [
    {name = "Andreas Klos",email = "aklos@outlook.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "gradio (>=5.25.2,<6.0.0)",
    "gradio-pdf (>=0.0.22,<0.0.23)",
    "langchain-ocr-lib (>=0.4.1,<0.5.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
